--- a/scripts/Dockerfile
+++ b/scripts/Dockerfile
@@ -3,16 +3,67 @@ FROM ubuntu:22.04
 RUN apt-get update && apt-get upgrade -y
 ARG DEBIAN_FRONTEND=noninteractive
 
-RUN apt install cmake gcc g++ libboost-dev libboost-serialization-dev libboost-mpi-dev libgsl-dev wget git dirmngr gnupg apt-transport-https ca-certificates software-properties-common python3 python3-dev python3-pip python3-numpy locales -y
 
+# pyton and ALE dependencies
+RUN apt install cmake gcc g++ libboost-dev libboost-serialization-dev libboost-mpi-dev libgsl-dev wget git dirmngr gnupg apt-transport-https ca-certificates software-properties-common python3 python3-dev python3-pip python3-numpy locales -y
+RUN pip install ete3 scipy
+
+
+# Zombi Horde
 RUN mkdir /usr/tools
 
 WORKDIR /usr/tools
 RUN git clone https://github.com/theotricou/Zombi_Horde.git
 
-RUN pip install ete3
-RUN pip install scipy
 
+# ALE
+RUN mkdir bpp
+WORKDIR bpp
+
+RUN git clone https://github.com/BioPP/bpp-core
+RUN git clone https://github.com/BioPP/bpp-seq
+RUN git clone https://github.com/BioPP/bpp-phyl
+
+WORKDIR bpp-core
+RUN git checkout tags/v2.4.1 -b version2.4.1
+RUN sed -i "45s/^.*/#include <limits>/" src/Bpp/Graph/GlobalGraph.cpp
+WORKDIR ../bpp-seq
+RUN git checkout tags/v2.4.1 -b version2.4.1
+WORKDIR ../bpp-phyl
+RUN git checkout tags/v2.4.1 -b version2.4.1
+WORKDIR ..
+
+RUN mkdir bpp-core-build
+RUN mkdir bpp-seq-build
+RUN mkdir bpp-phyl-build
+
+WORKDIR bpp-core-build/
+RUN cmake ../bpp-core -DCMAKE_INSTALL_PREFIX=/usr/ -DBUILD_TESTING=FALSE
+RUN make
+RUN make install
+
+WORKDIR ../bpp-seq-build/
+RUN cmake ../bpp-seq -DCMAKE_INSTALL_PREFIX=/usr/ -DBUILD_TESTING=FALSE
+RUN make
+RUN make install
+
+WORKDIR ../bpp-phyl-build/
+RUN cmake ../bpp-phyl -DCMAKE_INSTALL_PREFIX=/usr/ -DBUILD_TESTING=FALSE
+RUN make
+RUN make install
+
+
+WORKDIR ../..
+
+RUN git clone https://github.com/ssolo/ALE.git
+WORKDIR ALE
+RUN mkdir build
+WORKDIR build
+
+RUN cmake ..
+RUN make
+
+ENV PATH="${PATH}:/usr/tools/ALE/build/bin"
 
 
 # COPY . .
